--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "pnotify": "^5.2.0",
     "postcss-loader": "^4.0.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
